    files are reflected in view instantly now, without delay of 1 second.

* Added new class FmMenuToolItem - simplified GtkMenuToolButton with only
    menu button arrow without button that it is bound to.

* Applied common human interface guidelines to capitalization of strings.
    Changed some names that might be ambiguous: 'Computer' to 'Devices'.

* A whole lot of bugfixes.


Changes on 1.1.0 since 1.0.1:

* Added 'no_usb_trash' option into config file, defaulted to 0, which
    defines whether skip trashing files on removable media or not. If
    defined to skip then files will go into "trash-unsupported" and user
    will be asked by fm_file_ops_job_run_with_progress() to remove them
    instead.

* Added 'no_child_non_expandable' option into config file, defaulted to
    0, which adds feature to hide expanders on non-expandable rows so no
    extra 'No Sub Folder' rows are shown. No automation on that is done
    still since it may be expensive sometimes.

* Corrected underscores (mnemonics) on every menu and dialog.

* Fixed GTK+ 3.0 compatibility problems. Libfm can be compiled with Gtk
    2.18 ... 3.x and Glib 2.22+ currently (if glib < 2.26 or vala < 0.13
    still requires run configure --disable-actions). Added new switch to
    configure script --with-gtk=N where N is GTK+ generation to be used,
    may be either 2 or 3. Default is 2.

* Enabled option to Unmount removable media without ejecting it.

* Migrated menu:// support into built-in VFS. There will be support for
    menu editing functions later.

* Added search engine. Supports search:// URIs and has the UI represented
    by API fm_launch_search_simple().

* Full name in Icon View mode now shown in tooltip while long names are
    placed under icons in truncated form.

* Added ability to change columns of view. Works only for Detailed List
    View in FmStandardView widget for now. Implementation for other modes
    and widgets will come later on demand.
