@@ -577,6 +577,30 @@ fm_standard_view_get_type
 </SECTION>
 
 <SECTION>
+<FILE>fm-folder-config</FILE>
+<TITLE>FmFolderConfig</TITLE>
+FmFolderConfig
+fm_folder_config_close
+fm_folder_config_get_boolean
+fm_folder_config_get_double
+fm_folder_config_get_integer
+fm_folder_config_get_string
+fm_folder_config_get_string_list
+fm_folder_config_get_uint64
+fm_folder_config_is_empty
+fm_folder_config_open
+fm_folder_config_purge
+fm_folder_config_remove_key
+fm_folder_config_save_cache
+fm_folder_config_set_boolean
+fm_folder_config_set_double
+fm_folder_config_set_integer
+fm_folder_config_set_string
+fm_folder_config_set_string_list
+fm_folder_config_set_uint64
+</SECTION>
+
+<SECTION>
 <FILE>fm-folder-model</FILE>
 <TITLE>FmFolderModel</TITLE>
 FM_FOLDER_MODEL_COL_DEFAULT
