@@ -120,6 +120,7 @@ gboolean fm_init(FmConfig* config)
     _fm_thumbnail_loader_init();
     _fm_terminal_init(); /* should be called after config initialization */
     _fm_templates_init();
+    _fm_folder_config_init();
 
 #ifdef HAVE_ACTIONS
 	/* generated by vala */
@@ -150,6 +151,7 @@ void fm_finalize(void)
 	/* generated by vala */
     _fm_file_actions_finalize();
 #endif
+    _fm_folder_config_finalize();
     _fm_templates_finalize();
     _fm_terminal_finalize();
     _fm_thumbnail_loader_finalize();
